--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-posts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ariful-sagor.github.io/my-posts",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,6 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
