--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-posts",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/ariful-sagor/my-posts/",
+  "homepage": "hhttps://ariful-sagor.github.io/my-posts/",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
